Transform to SBT plugin and library